--- a/style.css
+++ b/style.css
@@ -49,13 +49,19 @@ img{
 }
 
 .contact-btn {
-  padding: 8px 16px;
-  background-color: #d10000;
+  background-color: #d90000;
   color: white;
   border: none;
-  border-radius: 6px;
+  padding: 12px 24px;
+  border-radius: 8px;
+  font-size: 16px;
   cursor: pointer;
-  font-weight: 500;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.contact-btn:hover {
+  background-color: #ff1414;
+  transform: scale(1.05);
 }
 
 .hamburger {
@@ -111,7 +117,7 @@ img{
 .hero-carousel {
   position: relative;
   width: 100%;
-  height: 90vh;
+  height: 50vh;
   overflow: hidden;
 }
 
@@ -149,15 +155,22 @@ img{
 }
 
 .contact-button{
-  padding: 8px 16px;
-  background-color: #cd0000;
+  background-color: #d90000;
   color: white;
   border: none;
-  border-radius: 6px;
+  padding: 12px 24px;
+  border-radius: 8px;
+  font-size: 16px;
   cursor: pointer;
-  font-weight: 500;
+  transition: background-color 0.3s ease, transform 0.3s ease;
   width: 200px;
   margin-top: 20px;
+}
+
+
+.contact-button:hover {
+  background-color: #ff1414;
+  transform: scale(1.05);
 }
 
 .overlay{
@@ -330,6 +343,12 @@ img{
   cursor: pointer;
   border-radius: 4px;
 margin-top: 10px;
+transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.cta button:hover {
+  background-color: #b30000;
+  transform: scale(1.05);
 }
 
 
